Sync initial work on Lexicon. #113  Fix various icon layout issues.

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -38,16 +38,19 @@ nav {
 // Main Body
 body {
   padding-top: 50px;
-
   // Header styling
   header {
     &#home {
-      background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.75)), url("../images/magic-box.jpg") center;
+      background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.75)), url("../images/magic-box.jpg") center;
       background-size: cover;
       text-align: center;
       &.jumbotron {
-        h1 {
-          color: mintcream;
+//        h1 {
+//          color: mintcream;
+//        }
+        img {
+          margin-left: auto;
+          margin-right: auto;
         }
       }
     }
@@ -60,6 +63,14 @@ body {
     }
     &#about {
       padding-top: 25px;
+    }
+    &#help {
+      padding-top: 25px;
+      img {
+        &.help-logo {
+          height: 100px;
+        }
+      }
     }
   }
 
@@ -74,6 +85,11 @@ body {
         &#about-body {
           p {
             font-size: 16px;
+          }
+        }
+        div {
+          &#help-body {
+            position: relative;
           }
         }
       }
